Prevents animations from getting stuck if the player clicks too much.

--- a/css/game.css
+++ b/css/game.css
@@ -36,7 +36,13 @@ ol {
   overflow: hidden;
   background: rgb(222, 238, 214);
 }
-#weapon {
+.character {
+  position: absolute;
+  left: 144px;
+  top: 340px;
+  display: block;
+  width: 32px;
+  height: 32px;
   background: rgb(109, 194, 202);
 }
 .weapon {
@@ -46,14 +52,10 @@ ol {
   display: block;
   width: 32px;
   height: 32px;
-}
-.weapon.start {
-}
-.weapon.end {
-  top: -32px;
+  background: rgb(109, 194, 202);
 }
 .fire {
-  transition: top .5s linear;
+  transition: top 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 #store {
   position: relative;
